--- a/vignettes/formatters.Rmd
+++ b/vignettes/formatters.Rmd
@@ -84,6 +84,7 @@ provides. This method must return a `MatrixPrintForm` object representing your t
 We can build a baby example method for `data.frames` to illustrate this process:
 
 ```{r}
+
 ## pagdfrow supports a large number of pieces of information regarding
 ## siblings and what information should be repeated after a pagination.
 ## we ignore all that here and just give the absolutely crucial info:
@@ -91,13 +92,11 @@ We can build a baby example method for `data.frames` to illustrate this process:
 ## extent (how many lines it takes up), rclass ("class of row")
 fake_pagdf_row <- function(i, rnms) {
     nm <- rnms[i]
-    pagdfrow(
-        nm = nm, lab = nm, rnum = i, pth = nm, extent = 1L,
-        rclass = "NA"
-    )
+    pagdfrow(nm = nm, lab = nm, rnum = i, pth = nm, extent = 1L,
+             rclass = "NA")
 }
 
-matrix_form.data.frame <- function(df) { # nolint
+matrix_form.data.frame <- function(df) {
     fmts <- lapply(df, function(x) if (is.null(obj_format(x))) "xx" else obj_format(x))
 
     bodystrs <- mapply(function(x, fmt) {
@@ -105,38 +104,32 @@ matrix_form.data.frame <- function(df) { # nolint
     }, x = df, fmt = fmts)
 
     rnms <- row.names(df)
-    if (is.null(rnms)) {
+    if (is.null(rnms))
         rnms <- as.character(seq_len(NROW(df)))
-    }
 
     cnms <- names(df)
 
-    strings <- rbind(
-        c("", cnms),
-        cbind(rnms, bodystrs)
-    )
+    strings <- rbind(c("", cnms),
+                     cbind(rnms, bodystrs))
 
     fnr <- nrow(strings)
     fnc <- ncol(strings)
 
     ## center alignment for column labels, left alignment for everything else
-    aligns <- rbind(
-        "center",
-        matrix("left", nrow = NROW(df), ncol = fnc)
-    )
+    aligns <- rbind("center",
+                    matrix("left", nrow = NROW(df), ncol = fnc))
 
-    ## build up fake pagination df
+
+    ## build up fake pagination df,
     rowdf <- basic_pagdf(row.names(df))
-    matrix_print_form(
-        strings = strings,
-        aligns = aligns,
-        spans = matrix(1, nrow = fnr, ncol = fnc),
-        formats = NULL,
-        row_info = rowdf,
-        has_topleft = FALSE,
-        nlines_header = 1,
-        nrow_header = 1
-    )
+    matrix_print_form(strings = strings,
+                      aligns = aligns,
+                      spans = matrix(1, nrow = fnr, ncol = fnc),
+                      formats = NULL,
+                      row_info = rowdf,
+                      has_topleft = FALSE,
+                      nlines_header = 1,
+                      nrow_header = 1)
 }
 
 cat(toString(matrix_form.data.frame(mtcars)))
