--- a/vignettes/formatters.Rmd
+++ b/vignettes/formatters.Rmd
@@ -130,7 +130,7 @@ matrix_form.data.frame <- function(df) {
 
   ## build up fake pagination df,
   rowdf <- basic_pagdf(row.names(df))
-  matrix_print_form(
+  MatrixPrintForm(
     strings = strings,
     aligns = aligns,
     spans = matrix(1, nrow = fnr, ncol = fnc),
