--- a/vignettes/formatters.Rmd
+++ b/vignettes/formatters.Rmd
@@ -14,7 +14,7 @@ editor_options:
 ---
 
 ```{r, include = FALSE}
-suggested_dependent_pkgs <- c("dplyr")
+suggested_dependent_pkgs <- c("")
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
