Change suggested_dependent_pkgs to an empty vector
Updated suggested_dependent_pkgs to use an empty vector.

Signed-off-by: Joe Zhu <sha.joe.zhu@gmail.com>

--- a/vignettes/formatters.Rmd
+++ b/vignettes/formatters.Rmd
@@ -14,7 +14,8 @@ editor_options:
 ---
 
 ```{r, include = FALSE}
-suggested_dependent_pkgs <- c("")
+# Change: suggested_dependent_pkgs <- c("")
+suggested_dependent_pkgs <- character(0) # Use an empty vector
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
